--- a/notebooks/mnist-fully-connected.ipynb
+++ b/notebooks/mnist-fully-connected.ipynb
@@ -2,7 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "1e757fbd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1f5326",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.append(os.path.dirname(os.getcwd()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "77d87e5f",
    "metadata": {},
    "outputs": [],
@@ -17,40 +38,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d552a9d2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import importlib"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "85769b8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnist_train_dataset = CSVImageDataset('/home/william/Documents/ML_Projects/AlgorithmsFFP/datasets/mnist_train.csv', (28, 28))\n",
-    "mnist_test_dataset = CSVImageDataset('/home/william/Documents/ML_Projects/AlgorithmsFFP/datasets/mnist_test.csv', (28, 28))"
+    "dataset_path = os.path.join(os.path.dirname(os.getcwd()), 'datasets')\n",
+    "\n",
+    "error_string = \"\"\"datasets not found. \n",
+    "The train and test mnist datasets in csv form can be downloaded from: \n",
+    "https://www.kaggle.com/datasets/oddrationale/mnist-in-csv?resource=download.\n",
+    "They should be saved as mnist_train.csv and mnist_test.csv under the top-level datasets directory\"\"\"\n",
+    "try:\n",
+    "    mnist_train_dataset = CSVImageDataset(os.path.join(dataset_path, 'mnist_train.csv'), (28, 28))\n",
+    "    mnist_test_dataset = CSVImageDataset(os.path.join(dataset_path, 'mnist_test.csv'), (28, 28))\n",
+    "except FileNotFoundError:\n",
+    "    raise FileNotFoundError(error_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "eb8db773",
    "metadata": {},
    "outputs": [],
    "source": [
+    "batch_size = 16\n",
     "train_dataloader = DataLoader(mnist_train_dataset, 16, shuffle=True)\n",
     "test_dataloader = DataLoader(mnist_test_dataset, 16, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "57b6e6cf",
    "metadata": {},
    "outputs": [],
@@ -69,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4acf0c50",
    "metadata": {},
    "outputs": [],
@@ -80,12 +111,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "15638d10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def accuracy(model, dataloader):\n",
+    "def get_accuracy(model, dataloader):\n",
     "    num_right = 0\n",
     "    num_wrong = 0\n",
     "    for inpt, labels in dataloader:\n",
@@ -94,173 +125,64 @@
     "        num_right_batch = np.sum(predictions==labels.elems)\n",
     "        num_right += num_right_batch\n",
     "        num_wrong += (len(predictions) - num_right_batch)\n",
-    "    return num_right, num_wrong"
+    "    return num_right/(num_right+num_wrong), num_right, num_wrong"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d8e128a7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "acc: 0.1001\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_right, num_wrong = accuracy(model, test_dataloader)\n",
-    "print(f'acc: {num_right/(num_right + num_wrong)}')"
+    "accuracy, num_right, num_wrong = get_accuracy(model, test_dataloader)\n",
+    "print(f'accuracy: {accuracy}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7b97e1a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3750"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(mnist_train_dataset.datapoints)//16"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "9a9b8b97",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "2900\n",
-      "3000\n",
-      "3100\n",
-      "3200\n",
-      "3300\n",
-      "3400\n",
-      "3500\n",
-      "3600\n",
-      "3700\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "losses = []\n",
-    "batch_num = 0\n",
+    "\n",
+    "pbar = tqdm(total=mnist_train_dataset.num_datapoints()//batch_size)\n",
     "for inpt, labels in train_dataloader:\n",
-    "    if batch_num % 100 == 0:\n",
-    "        print(batch_num)\n",
     "    logits = model(inpt)\n",
     "    loss = cross_entropy(logits, labels)\n",
     "    loss.backward()\n",
     "    losses.append(loss.elems)\n",
     "    optimizer.update()\n",
     "    loss.zero_grads()\n",
-    "    batch_num += 1"
+    "    pbar.update(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "1c82e8aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.79225542, 0.92685544],\n",
-       "       [0.31656808, 0.21713027]])"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.uniform(0, 1, size=(2, 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "5434120f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "acc: 0.8518\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_right, num_wrong = accuracy(model, test_dataloader)\n",
-    "print(f'acc: {num_right/(num_right + num_wrong)}')"
+    "test_accuracy, num_right, num_wrong = get_accuracy(model, test_dataloader)\n",
+    "train_accuracy, num_right, num_wrong = get_accuracy(model, train_dataloader)\n",
+    "print(f'test accuracy: {test_accuracy}')\n",
+    "print(f'train accuracy: {train_accuracy}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0746482f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "acc: 0.85025\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_right, num_wrong = accuracy(model, train_dataloader)\n",
-    "print(f'acc: {num_right/(num_right + num_wrong)}')"
+    "averaged_losses = [sum(losses[index-9:index+1])/10 if index >= 9 else sum(losses[:index+1])/(index+1) for index, loss in enumerate(losses)]\n",
+    "plt.plot(np.arange(len(losses)), averaged_losses)\n",
+    "plt.xlabel('batch number')\n",
+    "plt.ylabel('size 10 moving average batch loss')"
    ]
   },
   {
@@ -274,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('GenericML')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -288,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
