--- a/notebooks/mnist-fully-connected.ipynb
+++ b/notebooks/mnist-fully-connected.ipynb
@@ -32,8 +32,7 @@
     "from src.deep_learning.optimizer.optimizer import Momentum\n",
     "from src.deep_learning.RGrad.transform import ReLUBlock, Flatten, Transform\n",
     "import src.deep_learning.RGrad.function\n",
-    "from src.deep_learning.RGrad.function import cross_entropy\n",
-    "from tqdm import tqdm"
+    "from src.deep_learning.RGrad.function import cross_entropy"
    ]
   },
   {
@@ -44,7 +43,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.9"
   },
   "vscode": {
    "interpreter": {
