--- a/notebooks/mnist-fully-connected.ipynb
+++ b/notebooks/mnist-fully-connected.ipynb
@@ -196,7 +196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -210,11 +210,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "dd0553654488318308af652034b43cf80d506e1afda6e6b981456492341b7bb6"
+    "hash": "faaa29746481f3a7e2507ba9e5aa33429643876ea9ffe79bde7d9d86adf71e9d"
    }
   }
  },
